mon premier commit

--- a/indexe.html
+++ b/indexe.html
@@ -1,105 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>HTML PUR – Niveau Cosmique</title>
-</head>
-<body>
-
-<!-- ========================= -->
-<!-- PAGE HTML 100% PURE      -->
-<!-- ZÉRO CSS / ZÉRO JS       -->
-<!-- ========================= -->
-
-<center>
-  <h1>🚀 PROJET OMEGA – HTML BRUT 🚀</h1>
-  <p><b>Cette page est développée uniquement avec le langage HTML.</b></p>
-  <hr width="80%">
-</center>
-
-<h2>📡 Présentation</h2>
-<p>
-  Bienvenue dans une démonstration de la <i>puissance brute</i> du HTML.
-  Aucun style, aucun script, aucun artifice.
-  Juste des balises, comme en 1999… mais maîtrisées.
-</p>
-
-<h2>🧠 Structure avancée</h2>
-<ul>
-  <li>Utilisation sémantique des balises</li>
-  <li>Hiérarchie logique du document</li>
-  <li>Lisible par les humains, les machines et les aliens</li>
-</ul>
-
-<h3>📊 Tableau de données interstellaires</h3>
-<table border="1" cellpadding="10" cellspacing="0">
-  <tr>
-    <th>Mission</th>
-    <th>Statut</th>
-    <th>Année</th>
-  </tr>
-  <tr>
-    <td>Apollo 11</td>
-    <td>Succès</td>
-    <td>1969</td>
-  </tr>
-  <tr>
-    <td>Voyager 1</td>
-    <td>Actif</td>
-    <td>1977</td>
-  </tr>
-  <tr>
-    <td>OMEGA-X</td>
-    <td>Classifié</td>
-    <td>∞</td>
-  </tr>
-</table>
-
-<h2>📁 Formulaire ultra-sécurisé</h2>
-<form>
-  <label>Nom :</label><br>
-  <input type="text"><br><br>
-
-  <label>Code secret :</label><br>
-  <input type="password"><br><br>
-
-  <label>Planète d'origine :</label><br>
-  <select>
-    <option>Terre</option>
-    <option>Mars</option>
-    <option>Europa</option>
-    <option>Inconnue</option>
-  </select><br><br>
-
-  <input type="submit" value="Envoyer à la NASA">
-</form>
-
-<h2>📜 Contenu éditorial</h2>
-<blockquote>
-  "Quand tout tombe en panne, il reste toujours le HTML."<br>
-  — Ancien développeur légendaire
-</blockquote>
-
-<pre>
-&lt;html&gt;
-  &lt;head&gt;
-    &lt;title&gt;Pureté&lt;/title&gt;
-  &lt;/head&gt;
-  &lt;body&gt;
-    &lt;p&gt;La simplicité est une arme.&lt;/p&gt;
-  &lt;/body&gt;
-&lt;/html&gt;
-</pre>
-
-<hr>
-
-<footer>
-  <p>
-    Page générée sans CSS, sans JavaScript,<br>
-    compatible avec tous les navigateurs depuis 25 ans.<br>
-    <b>Même la NASA comprend.</b>
-  </p>
-</footer>
-
-</body>
-</html>
+hohohoho
