--- a/index.html
+++ b/index.html
@@ -2,143 +2,201 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Portfolio | [Ton Nom]</title>
+    <title>Portfolio de Yanis</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <style>
-        /* Styles de base */
-        :root {
-            --primary-color: #2563eb;
-            --dark-color: #1e293b;
-            --light-color: #f8fafc;
-            --text-color: #334155;
-        }
-
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
             margin: 0;
-            color: var(--text-color);
-            background-color: var(--light-color);
+            font-family: Arial, sans-serif;
+            background: #0f172a;
+            color: #e5e7eb;
         }
 
-        /* Navigation */
-        nav {
-            background: var(--dark-color);
-            color: white;
-            padding: 1rem 5%;
+        header {
+            background: #020617;
+            padding: 15px 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             position: sticky;
             top: 0;
-            z-index: 1000;
         }
 
-        nav .logo { font-size: 1.5rem; font-weight: bold; }
-        nav ul { display: flex; list-style: none; gap: 20px; }
-        nav a { color: white; text-decoration: none; transition: 0.3s; }
-        nav a:hover { color: var(--primary-color); }
+        header h1 {
+            margin: 0;
+            font-size: 20px;
+        }
 
-        /* Hero Section */
-        header {
-            height: 60vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+        nav a {
+            margin-left: 20px;
+            color: #e5e7eb;
+            text-decoration: none;
+            font-size: 14px;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .hero {
+            padding: 80px 20px;
             text-align: center;
-            background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
-            color: white;
+            background: radial-gradient(circle at top, #1d4ed8, #020617 60%);
+        }
+
+        .hero h2 {
+            font-size: 32px;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 16px;
+            max-width: 600px;
+            margin: 0 auto 25px;
+        }
+
+        .hero .btn {
+            display: inline-block;
+            padding: 10px 22px;
+            border-radius: 4px;
+            background: #facc15;
+            color: #111827;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 14px;
+        }
+
+        .hero .btn:hover {
+            background: #eab308;
+        }
+
+        main {
+            max-width: 900px;
+            margin: 40px auto;
             padding: 0 20px;
         }
 
-        header h1 { font-size: 3rem; margin-bottom: 10px; }
-        header p { font-size: 1.2rem; opacity: 0.9; }
+        section {
+            margin-bottom: 40px;
+        }
 
-        /* Sections */
-        section { padding: 4rem 10%; }
-        h2 { text-align: center; margin-bottom: 2rem; color: var(--dark-color); }
+        section h3 {
+            font-size: 22px;
+            margin-bottom: 10px;
+            border-bottom: 1px solid #1f2937;
+            padding-bottom: 5px;
+        }
 
-        /* Grille de projets */
-        .project-grid {
+        .projects {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
             gap: 20px;
         }
 
-        .project-card {
-            background: white;
-            padding: 20px;
+        .card {
+            background: #020617;
             border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
+            padding: 15px;
+            border: 1px solid #1f2937;
         }
 
-        .project-card:hover { transform: translateY(-5px); }
-        .project-card h3 { margin-top: 0; color: var(--primary-color); }
+        .card h4 {
+            margin-top: 0;
+            margin-bottom: 8px;
+        }
 
-        /* Footer */
+        .card p {
+            font-size: 14px;
+            margin: 0;
+        }
+
+        .contact p {
+            margin: 5px 0;
+            font-size: 14px;
+        }
+
+        .contact a {
+            color: #60a5fa;
+            text-decoration: none;
+        }
+
+        .contact a:hover {
+            text-decoration: underline;
+        }
+
         footer {
-            background: var(--dark-color);
-            color: white;
             text-align: center;
-            padding: 2rem;
-            margin-top: 2rem;
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            nav ul { display: none; }
-            header h1 { font-size: 2rem; }
+            padding: 15px;
+            font-size: 12px;
+            color: #6b7280;
+            border-top: 1px solid #1f2937;
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
 
+<header>
+    <h1>Portfolio de Yanis</h1>
     <nav>
-        <div class="logo">MonPortfolio</div>
-        <ul>
-            <li><a href="#projets">Projets</a></li>
-            <li><a href="#a-propos">À propos</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <a href="#a-propos">À propos</a>
+        <a href="#projets">Projets</a>
+        <a href="#contact">Contact</a>
     </nav>
+</header>
 
-    <header>
-        <h1>Bonjour, je suis [Ton Nom]</h1>
-        <p>Développeur Fullstack | Passionné par la création de solutions numériques</p>
-    </header>
+<section class="hero">
+    <h2>Bienvenue sur mon portfolio</h2>
+    <p>
+        Je m'appelle Yanis et je m'intéresse à l'administration système, la virtualisation et le développement web.
+        Voici une sélection de mes projets et de mon parcours.
+    </p>
+    <a href="#projets" class="btn">Voir mes projets</a>
+</section>
+
+<main>
+    <section id="a-propos">
+        <h3>À propos de moi</h3>
+        <p>
+            Je suis étudiant et je me forme aux technologies Linux, à Git et aux bases du développement web.
+            J’aime comprendre comment les choses fonctionnent en détail et résoudre des problèmes concrets.
+        </p>
+    </section>
 
     <section id="projets">
-        <h2>Mes Projets</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>Projet 1</h3>
-                <p>Description courte de ce que vous avez réalisé dans ce projet et les technologies utilisées.</p>
-                <a href="#">Voir sur GitHub →</a>
+        <h3>Mes projets</h3>
+        <div class="projects">
+            <div class="card">
+                <h4>Portfolio HTML</h4>
+                <p>
+                    Création d’un site statique en HTML/CSS pour présenter mon parcours et mes projets. Hébergé via GitHub Pages.
+                </p>
             </div>
-            <div class="project-card">
-                <h3>Projet 2</h3>
-                <p>Une application web dynamique créée pour résoudre un problème spécifique.</p>
-                <a href="#">Voir sur GitHub →</a>
+            <div class="card">
+                <h4>Projet SIO1</h4>
+                <p>
+                    Page de présentation de mon stage SIO1, avec description des tâches réalisées et des compétences acquises.
+                </p>
             </div>
-            <div class="project-card">
-                <h3>Projet 3</h3>
-                <p>Analyse de données ou projet personnel utilisant Python/React.</p>
-                <a href="#">Voir sur GitHub →</a>
+            <div class="card">
+                <h4>Expérimentations Linux</h4>
+                <p>
+                    Mise en place de machines virtuelles, tests de distributions Linux et configuration de services de base.
+                </p>
             </div>
         </div>
     </section>
 
-    <section id="a-propos" style="background: #fff;">
-        <h2>À propos</h2>
-        <p>Expliquez ici brièvement votre parcours, vos compétences clés (JavaScript, HTML, CSS, SQL, etc.) et ce que vous recherchez comme opportunités.</p>
+    <section id="contact" class="contact">
+        <h3>Contact</h3>
+        <p>GitHub : <a href="https://github.com/yanisvedeau-lgtm" target="_blank">yanisvedeau-lgtm</a></p>
     </section>
 
-    <footer id="contact">
-        <p>Me contacter : mon.email@exemple.com</p>
-        <p>© 2025 [Ton Nom] - Réalisé pour mon dépôt GitHub</p>
-    </footer>
-
+<footer>
+    &copy; 2025 – Portfolio de Yanis. Tous droits réservés.
 </body>
 </html>
+</footer>
+</main>
+
