--- a/accueil.html
+++ b/accueil.html
@@ -1,203 +1,227 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Portfolio de Yanis</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Portfolio de Yanis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #0f172a;
-            color: #e5e7eb;
-        }
+  <style>
+    /* -------------------- RESET -------------------- */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        header {
-            background: #020617;
-            padding: 15px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: sticky;
-            top: 0;
-        }
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background-color: #f5f7fa;
+      color: #333;
+      line-height: 1.6;
+    }
 
-        header h1 {
-            margin: 0;
-            font-size: 20px;
-        }
+    /* -------------------- HEADER -------------------- */
+    header {
+      background-color: #0f172a;
+      color: white;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
 
-        nav a {
-            margin-left: 20px;
-            color: #e5e7eb;
-            text-decoration: none;
-            font-size: 14px;
-        }
+    header h1 {
+      font-size: 24px;
+      font-weight: 600;
+    }
 
-        nav a:hover {
-            text-decoration: underline;
-        }
+    nav a {
+      color: white;
+      margin-left: 25px;
+      text-decoration: none;
+      font-size: 15px;
+      transition: 0.2s;
+    }
 
-        .hero {
-            padding: 80px 20px;
-            text-align: center;
-            background: radial-gradient(circle at top, #1d4ed8, #020617 60%);
-        }
+    nav a:hover {
+      color: #38bdf8;
+    }
 
-        .hero h2 {
-            font-size: 32px;
-            margin-bottom: 10px;
-        }
+    /* -------------------- HERO -------------------- */
+    .hero {
+      background: linear-gradient(to right, #1e3a8a, #3b82f6);
+      color: white;
+      padding: 100px 20px;
+      text-align: center;
+    }
 
-        .hero p {
-            font-size: 16px;
-            max-width: 600px;
-            margin: 0 auto 25px;
-        }
+    .hero h2 {
+      font-size: 42px;
+      margin-bottom: 15px;
+      font-weight: 700;
+    }
 
-        .hero .btn {
-            display: inline-block;
-            padding: 10px 22px;
-            border-radius: 4px;
-            background: #facc15;
-            color: #111827;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 14px;
-        }
+    .hero p {
+      font-size: 18px;
+      max-width: 700px;
+      margin: 0 auto 30px;
+    }
 
-        .hero .btn:hover {
-            background: #eab308;
-        }
+    .btn-primary {
+      background-color: #facc15;
+      color: #1e293b;
+      padding: 12px 25px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+      transition: 0.2s;
+    }
 
-        main {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
+    .btn-primary:hover {
+      background-color: #eab308;
+    }
 
-        section {
-            margin-bottom: 40px;
-        }
+    /* -------------------- SECTIONS -------------------- */
+    .section {
+      padding: 60px 20px;
+      max-width: 1100px;
+      margin: auto;
+    }
 
-        section h3 {
-            font-size: 22px;
-            margin-bottom: 10px;
-            border-bottom: 1px solid #1f2937;
-            padding-bottom: 5px;
-        }
+    .section h3 {
+      font-size: 26px;
+      margin-bottom: 20px;
+      border-left: 5px solid #3b82f6;
+      padding-left: 10px;
+      font-weight: 600;
+    }
 
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-            gap: 20px;
-        }
+    /* -------------------- ABOUT -------------------- */
+    .about-box {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+      font-size: 17px;
+    }
 
-        .card {
-            background: #020617;
-            border-radius: 8px;
-            padding: 15px;
-            border: 1px solid #1f2937;
-        }
+    /* -------------------- PROJECTS -------------------- */
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 25px;
+    }
 
-        .card h4 {
-            margin-top: 0;
-            margin-bottom: 8px;
-        }
+    .card {
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+      transition: 0.2s;
+    }
 
-        .card p {
-            font-size: 14px;
-            margin: 0;
-        }
+    .card:hover {
+      transform: translateY(-5px);
+    }
 
-        .contact p {
-            margin: 5px 0;
-            font-size: 14px;
-        }
+    .card h4 {
+      margin-bottom: 10px;
+      font-size: 20px;
+      color: #1e3a8a;
+    }
 
-        .contact a {
-            color: #60a5fa;
-            text-decoration: none;
-        }
+    /* -------------------- CONTACT -------------------- */
+    .contact p {
+      font-size: 17px;
+      margin: 8px 0;
+    }
 
-        .contact a:hover {
-            text-decoration: underline;
-        }
+    .contact a {
+      color: #2563eb;
+      text-decoration: none;
+    }
 
-        footer {
-            text-align: center;
-            padding: 15px;
-            font-size: 12px;
-            color: #6b7280;
-            border-top: 1px solid #1f2937;
-            margin-top: 30px;
-        }
-    </style>
+    .contact a:hover {
+      text-decoration: underline;
+    }
+
+    /* -------------------- FOOTER -------------------- */
+    footer {
+      background-color: #0f172a;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+      font-size: 14px;
+    }
+  </style>
 </head>
+
 <body>
 
-<header>
+  <!-- -------------------- HEADER -------------------- -->
+  <header>
     <h1>Portfolio de Yanis</h1>
     <nav>
-        <a href="#a-propos">À propos</a>
-        <a href="#projets">Projets</a>
-        <a href="#contact">Contact</a>
+      <a href="#about">À propos</a>
+      <a href="#projects">Projets</a>
+      <a href="#contact">Contact</a>
     </nav>
-</header>
+  </header>
 
-<section class="hero">
+  <!-- -------------------- HERO -------------------- -->
+  <section class="hero">
     <h2>Bienvenue sur mon portfolio</h2>
-    <p>
-        Je m'appelle Yanis et je m'intéresse à l'administration système, la virtualisation et le développement web.
-        Voici une sélection de mes projets et de mon parcours.
-    </p>
-    <a href="#projets" class="btn">Voir mes projets</a>
-</section>
+    <p>Je suis Yanis, étudiant passionné par l’informatique, le développement web et l’administration système. Découvrez mes projets, mon parcours et mes compétences.</p>
+    <a href="#projects" class="btn-primary">Voir mes projets</a>
+  </section>
 
-<main>
-    <section id="a-propos">
-        <h3>À propos de moi</h3>
-        <p>
-            Je suis étudiant et je me forme aux technologies Linux, à Git et aux bases du développement web.
-            J’aime comprendre comment les choses fonctionnent en détail et résoudre des problèmes concrets.
-        </p>
-    </section>
+  <!-- -------------------- ABOUT -------------------- -->
+  <section id="about" class="section">
+    <h3>À propos de moi</h3>
+    <div class="about-box">
+      <p>Je suis étudiant en informatique et je développe mes compétences dans plusieurs domaines : HTML/CSS, Git, Linux, virtualisation et gestion de projets. J’aime apprendre par la pratique et créer des projets concrets.</p>
+    </div>
+  </section>
 
-    <section id="projets">
-        <h3>Mes projets</h3>
-        <div class="projects">
-            <div class="card">
-                <h4>Portfolio HTML</h4>
-                <p>
-                    Création d’un site statique en HTML/CSS pour présenter mon parcours et mes projets. Hébergé via GitHub Pages.
-                </p>
-            </div>
-            <div class="card">
-                <h4>Projet SIO1</h4>
-                <p>
-                    Page de présentation de mon stage SIO1, avec description des tâches réalisées et des compétences acquises.
-                </p>
-            </div>
-            <div class="card">
-                <h4>Expérimentations Linux</h4>
-                <p>
-                    Mise en place de machines virtuelles, tests de distributions Linux et configuration de services de base.
-                </p>
-            </div>
-        </div>
-    </section>
+  <!-- -------------------- PROJECTS -------------------- -->
+  <section id="projects" class="section">
+    <h3>Mes projets</h3>
+    <div class="projects">
 
-    <section id="contact" class="contact">
-        <h3>Contact</h3>
-        <p>Email : <a href="mailto:ton.email@example.com">ton.email@example.com</a></p>
-        <p>GitHub : <a href="https://github.com/yanisvedeau-lgtm" target="_blank">yanisvedeau-lgtm</a></p>
-    </section>
-</main>
+      <div class="card">
+        <h4>Portfolio HTML</h4>
+        <p>Création d’un site web statique pour présenter mon parcours, mes compétences et mes projets. Hébergé via GitHub Pages.</p>
+      </div>
 
-<footer>
+      <div class="card">
+        <h4>Stage SIO1</h4>
+        <p>Page dédiée à mon stage SIO1, avec description des missions réalisées et des compétences acquises.</p>
+      </div>
+
+      <div class="card">
+        <h4>Expérimentations Linux</h4>
+        <p>Tests de distributions Linux, configuration de services, scripts d’automatisation et gestion de machines virtuelles.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- -------------------- CONTACT -------------------- -->
+  <section id="contact" class="section contact">
+    <h3>Contact</h3>
+    <p>Email : <a href="mailto:yanis@example.com">yanis@example.com</a></p>
+    <p>GitHub : <a href="https://github.com/yanisvedeau-lgtm" target="_blank">yanisvedeau-lgtm</a></p>
+  </section>
+
+  <!-- -------------------- FOOTER -------------------- -->
+  <footer>
     &copy; 2025 – Portfolio de Yanis. Tous droits réservés.
-</footer>
+  </footer>
 
 </body>
 </html>
